# FaceitCompetitiveRatingService

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 2026_01_30_0106-b16e3dc8d96a_create_player_table.py  2026_01_30_0140-eb87d03ce3cc_fix_player_activated_at_timezone.py  2026_01_30_1937-9efb8781d8b6_create_match_table.py  2026_01_30_2101-2d4d5a8c0cbe_rename_match_table_and_update_default_.py  2026_01_31_1644-2013d39dd549_add_database_indexes_for_performance_.py  2026_02_01_1022-e81ad960f76e_change_maps_column_type_to_array_string_.py  2026_02_01_1307-a7c262ca8f84_create_team_table.py  2026_02_01_1628-32e960817110_create_match_players_table.py  2026_02_04_1805-8d29a3998409_create_map_stats_table.py  2026_02_12_2145-c8896a148f3f_add_player_match_history_cache.py  2026_06_04_2100-db59f730c5c1_make_steam_id_nullable.py  2026_06_09_1726-7cc6b1814833_add_updated_at_to_players.py  2026_06_14_1919-cba6c624a835_set_composite_pk_for_player_match_.py  2026_06_26_1600-74d113f81164_add_player_stats_table.py
api/: __init__.py
api/api_v1/: __init__.py
app/: main.py  worker.py
app/api/: __init__.py  exception_handlers.py  middleware.py
app/application/: __init__.py  maps_stats_service.py  match_history_service.py  player_analysis_service.py  player_service.py  player_stats_service.py  time_analysis_service.py
app/core/: arq_config.py  arq_pool.py  config.py  exceptions.py  limiter.py  logger.py  redis.py
core/: config.py
(+65 files in other folders)
