[project]
name = "faceitcompetitiveratingservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Ha1seZz",email = "fahretdinovdamir7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]

[tool.poetry]
package-mode = false  # Отключаем пакетный режим

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
